2000-09-30  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_mount): Check if the length
	of the partition is less than the size of a super block, before
	attempting to read the super block.

	* grub/asmstub.c (console_putchar)
	[HAVE_LIBCURSES_H && REFRESH_IMMEDIATELY]: Call refresh, to ease
	debugging.
	
2000-09-30  OKUJI Yoshinori  <okuji@gnu.org>

	Added two new commands, "partnew" and "parttype", based on the
	patch by Stefan Ondrejicka <ondrej@idata.sk>:
	* stage2/builtins.c (partnew_func): New function.
	(builtin_partnew): New variable.
	(parttype_func): New function.
	(builtin_parttype): New variable.
	(builtin_table): Added pointers to BUILTIN_PARTNEW and to
	BUILTIN_PARTTYPE.
	
2000-09-29  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (find_func): New variable GOT_FILE is set to
	one if FILENAME is found. Otherwise, it is set to zero.
	Clear ERRNUM at the end in the loop for floppies, to ensure that
	ERRNUM is cleared before examining hard disks.
	Rewrite the loop for hard disks using next_partitions, so this
	function now checks all partitions you have certainly.
	If GOT_FILE is non-zero, set ERRNUM to ERR_FILE_NOT_FOUND and
	return one.
	
2000-09-29  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (check_BSD_parts): Removed.
	(next_partition): New function.
	(real_open_partition): Rewritten using next_partition.
	(set_device) [!STAGE1_5]: Skip a comma in DEVICE, even when the
	BSD partition is not specified.
	[!STAGE1_5] (print_completions): Don't append ')' if the
	partition is a PC slice which may have BSD partitions. Instead,
	try to complete the command-line with possible partitions.
	* stage2/shared.h (next_partition): Declared.
	
2000-09-27  OKUJI Yoshinori  <okuji@gnu.org>

	* configure.in (--enable-serial): Changed to ...
	(--disable-serial): ... this. Now the serial support is enabled
	by default.
	
2000-09-27  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/char_io.c [!STAGE1_5] (get_cmdline) [!SUPPORT_SERIAL]: 